# KronKalc

./: Cargo.toml
src/: layout.rs  line.rs  main.rs  renderer.rs  screen.rs  text.rs
src/layout/: context.rs  lines.rs  mod.rs  renderable.rs  screen.rs
src/line/: content.rs  line_handler.rs
src/render/: context.rs  handler.rs  mod.rs  renderer.rs
src/text/: literal_text.rs  mod.rs
